--- a/info.html
+++ b/info.html
@@ -88,7 +88,7 @@
     ヒーロートップ（ロゴ・メニュー）
   ========================= -->
   <div class="hero-top">
-    <a href="index-phone.html" class="hero-logo-link">
+    <a href="index.html" class="hero-logo-link">
       <img src="img/phone/logo.svg" class="hero-logo" alt="Cocotte Home">
     </a>
     <img src="img/phone/menu.svg" class="hero-menu" id="openMenu" alt="menu">
