--- a/calendar.html
+++ b/calendar.html
@@ -42,7 +42,7 @@
 
       <!-- 上部（ロゴ・メニューボタン） -->
       <div class="hero-top">
-        <a href="index-phone.html" class="hero-logo-link">
+        <a href="index.html" class="hero-logo-link">
           <img src="img/phone/logo.svg" class="hero-logo" alt="Cocotte Home">
         </a>
         <img src="img/phone/menu.svg" class="hero-menu" alt="menu">
